test/spec_vectors/simd_f64x2_cmp/fail/module_14.wat
(module (func $f64x2.eq-arg-empty (result v128) (f64x2.eq)))